--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="download_using_refrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
 
     <string name="app_description">Download files from Internet</string>
+    <string name="file_name">File name:</string>
+    <string name="download_status">Status:</string>
+    <string name="download_status_content_description">Download status</string>
 
 </resources>
